examples/test/testpolicy8455.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8455
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key17: value3
      key34: value31
      key8: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value24
      podSelector:
        matchLabels:
          key1: value31
          key33: value3
